--- a/Python Fundamentals/Module_1_3_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_3_Python_Fundamentals.ipynb
@@ -51,11 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "word = \"cello\"\n",
@@ -66,11 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "r\n",
+      "u\n",
+      "m\n",
+      "p\n",
+      "e\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# note: the variable 'letter' changed to 'item'\n",
@@ -82,11 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "i\n",
+      "a\n",
+      "n\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# note: variable is now 'xyz' \n",
@@ -99,11 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skye to SkYe\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# creates a new string (new_name) adding a letter (ltr) each loop\n",
@@ -134,17 +172,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a first name: Thomas\n",
+      "T\n",
+      "h\n",
+      "o\n",
+      "m\n",
+      "a\n",
+      "s\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Get user input for first_name\n",
     "# [ ] iterate through letters in first_name \n",
     "#    - print each letter on a new line\n",
     "\n",
+    "first_name = input (\"Enter a first name: \")\n",
     "\n",
+    "for letter in first_name:\n",
+    "    print(letter)\n",
     "\n"
    ]
   },
@@ -166,14 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a first name: Iisaah\n",
+      "IIsaah\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create capitalize-io\n",
-    "\n"
+    "first_name = input(\"Enter a first name: \")\n",
+    "new_name = \"\"\n",
+    "\n",
+    "for letter in first_name:\n",
+    "    if letter.lower() == \"i\":\n",
+    "        new_name += letter.upper()\n",
+    "    elif letter.lower() == \"o\":\n",
+    "        new_name += letter.upper()\n",
+    "    else:\n",
+    "        new_name += letter\n",
+    "        \n",
+    "print (new_name)\n"
    ]
   },
   {
@@ -207,9 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example\n",
@@ -222,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Iterate BACKWARDS\n",
@@ -250,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create & print a variable, other_word, made of every other letter in long_word\n",
@@ -263,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Mirror Color\n",
@@ -300,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
