--- a/Python Fundamentals/Module_1_1_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_1_Python_Fundamentals.ipynb
@@ -54,11 +54,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A <-- first character at index 0\n",
+      "l\n",
+      "t\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - note the first element is always index = 0\n",
     "student_name = \"Alton\"\n",
@@ -71,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Winner! Name starts with J: Jin\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Jin\"\n",
@@ -87,9 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-8c616a470dcf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# cannot index out of range\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mstudent_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Tobias\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstudent_name\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run ERROR example\n",
     "# cannot index out of range\n",
@@ -116,25 +146,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n",
+      "o\n",
+      "d\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string 5 or more letters long to the variable: street_name\n",
     "# [ ] print the 1st, 3rd and 5th characters\n",
+    "street_name = \"Broadway\"\n",
     "\n",
+    "print (street_name[0])\n",
+    "print (street_name[2])\n",
+    "print (street_name[4])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a team name where the second letter is 'i', 'o', or 'u'Pirates\n",
+      "The second letter is 'i'\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create an input variable: team_name - ask that second letter = \"i\", \"o\", or \"u\"\n",
     "# [ ] Test if team_name 2nd character = \"i\", \"o\", or \"u\" and print a message\n",
     "# note: use if, elif and else\n",
+    "team_name = input(\"Enter a team name where the second letter is 'i', 'o', or 'u'\")\n",
+    "\n",
+    "if team_name[1] == \"i\":\n",
+    "    print (\"The second letter is 'i'\")\n",
+    "elif team_name[1] == \"o\":\n",
+    "    print (\"The second letter is 'o'\")\n",
+    "elif team_name[1] == \"u\":\n",
+    "    print (\"The second letter is 'u'\")\n",
+    "else:\n",
+    "    print (\"That input doesn't match the required parameters\")\n",
     "\n"
    ]
   },
@@ -179,9 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joana ends with 'a'\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Joana\"\n",
@@ -193,9 +264,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joana has 2nd to last letter of 'n'\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# get second to last letter\n",
@@ -205,9 +284,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "for Joana\n",
+      "index 3 = 'n'\n",
+      "index -2 = 'n'\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# you can get to the same letter with index counting + or -\n",
@@ -228,25 +317,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n\n",
+      "o\n",
+      "t\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] assign a string 5 or more letters long to the variable: street_name\n",
     "# [ ] print the last 3 characters of street_name\n",
-    "\n"
+    "\n",
+    "street_name = \"Houston\"\n",
+    "\n",
+    "print (street_name[-1])\n",
+    "print (street_name[-2])\n",
+    "print (street_name[-3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "m\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and assign string variable: first_name\n",
-    "\n",
+    "first_name = \"Sam\"\n",
     "# [ ] print the first and last letters of name\n",
-    "\n"
+    "print (first_name[0])\n",
+    "print (first_name[-1])"
    ]
   },
   {
@@ -262,14 +376,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review, Run, Fix the error using string index\n",
     "shoe = \"tennis\"\n",
     "# print the last letter\n",
-    "print(shoe(-1))\n",
+    "print(shoe[-1])\n",
     "\n"
    ]
   },
@@ -298,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
