--- a/Python Fundamentals/Module_1_3_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_3_Python_Fundamentals.ipynb
@@ -277,9 +277,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S\n",
+      "k\n",
+      "y\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "student_name = \"Skye\"\n",
@@ -290,9 +300,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y\n",
+      "k\n",
+      "S\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate BACKWARDS\n",
     "# [ ] review and run example\n",
@@ -316,26 +336,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jxaoiin\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create & print a variable, other_word, made of every other letter in long_word\n",
     "long_word = \"juxtaposition\"\n",
-    "\n"
+    "other_word = long_word[::2]\n",
+    "print (other_word)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your favorite color: Purple\n",
+      "elpruPPurple\n"
+     ]
+    }
+   ],
    "source": [
     "# Mirror Color\n",
     "# [ ] get user input, fav_color\n",
     "# [ ] print fav_color backwards + fav_color\n",
     "# example: \"Red\" prints \"deRRed\"\n",
-    "\n"
+    "\n",
+    "fav_color = input(\"Enter your favorite color: \")\n",
+    "\n",
+    "print (fav_color[::-1] + fav_color)"
    ]
   },
   {
