--- a/Python Fundamentals/Module_1_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_Practice_Python_Fundamentals.ipynb
@@ -26,46 +26,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the second character from planet_name: \"u\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print(planet_name[1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the first character from planet_name: \"J\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print(planet_name[0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J r\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] access and print the first and last characters from planet_name\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print (planet_name[0], planet_name[-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using a negative index access and print the first character from planet_name: \"J\"\n",
     "planet_name = \"Jupiter\"\n",
-    "\n"
+    "print (planet_name[-7])\n"
    ]
   },
   {
@@ -81,35 +113,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nep\n",
+      "tune\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print planet_name sliced into the first 3 characters and remaining characters\n",
     "planet_name = \"Neptune\"\n",
-    "\n"
+    "\n",
+    "print (planet_name[:3])\n",
+    "print (planet_name[3:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print 1st char and then every 3rd char of wise_words\n",
     "# use string slice with a step\n",
     "wise_words = 'Play it who opens'\n",
+    "print (wise_words[0::3])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enutpeN\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print planet_name in reverse\n",
-    "\n"
+    "print (planet_name[::-1])\n"
    ]
   },
   {
@@ -127,40 +187,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Favorite Food? Pizza\n",
+      "P\n",
+      "i\n",
+      "z\n",
+      "z\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Get user input for 1 fav_food\n",
     "# [ ] iterate through letters in fav_food \n",
     "#    - print each letter on a new line\n",
     "\n",
+    "fav_food = input (\"Favorite Food? \")\n",
     "\n",
+    "index = 0\n",
+    "\n",
+    "while index < len(fav_food):\n",
+    "    print (fav_food[index])\n",
+    "    index += 1\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good-code-is-commented-code\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] iterate work_tip string concatenate each letter to variable: new_string \n",
     "# [ ] concatenate the letter or a \"-\" instead of a space \" \"\n",
     "# tip: concatenate string example: word = word + \"a\"\n",
     "work_tip = \"Good code is commented code\"\n",
     "\n",
+    "length = len(work_tip)\n",
+    "index = 0\n",
+    "char = \"\"\n",
+    "new_string = \"\"\n",
+    "\n",
+    "while index < length:\n",
+    "    char = work_tip[index]\n",
+    "    if char == \" \":\n",
+    "        new_string = new_string + \"-\"\n",
+    "    else:\n",
+    "        new_string = new_string + char\n",
+    "        \n",
+    "    index += 1\n",
+    "    \n",
+    "print (new_string)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "i\n",
+      "r\n",
+      "o\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print the first 4 letters of name on new line\n",
     "name = \"Hiroto\"\n",
+    "i = 0\n",
+    "\n",
+    "while i < 4:\n",
+    "    print (name[i])\n",
+    "    i += 1\n",
     "\n"
    ]
   },
@@ -382,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
