--- a/Python Fundamentals/Module_1_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_Practice_Python_Fundamentals.ipynb
@@ -286,13 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ioo\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Print every other letter from 2nd to last letter of name \n",
     "name = \"Hiroto\"\n",
-    "\n"
+    "\n",
+    "print (name[1:len(name):2])\n"
    ]
   },
   {
@@ -315,11 +324,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a first name: Bernnadette\n",
+      "B?rnn?d????\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create Mystery Name\n",
+    "\n",
+    "first_name = input(\"Enter a first name: \")\n",
+    "new_name = \"\"\n",
+    "index = 0\n",
+    "\n",
+    "while index < len(first_name):\n",
+    "    letter = first_name[index]\n",
+    "    if letter == \"e\":\n",
+    "        new_name = new_name + \"?\"\n",
+    "    elif letter == \"t\":\n",
+    "        new_name = new_name + \"?\"\n",
+    "    elif letter == \"a\":\n",
+    "        new_name = new_name + \"?\"\n",
+    "    else:\n",
+    "        new_name = new_name + letter\n",
+    "    index += 1\n",
+    "    \n",
+    "print (new_name)\n",
+    "\n",
+    "\n",
+    "        \n",
     "\n"
    ]
   },
@@ -344,50 +383,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] find and display the length of the string: topic\n",
     "topic = \"len() returns the length of a string\"\n",
-    "\n"
+    "print (len(topic))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use len() to find and display the mid_pt (middle) index (+/- 1) of the string: topic\n",
     "# note: index values are whole numbers\n",
     "topic = \"len() can take a sequence, like a string, as an argument\"\n",
+    "\n",
+    "print (int(len(topic)/2))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print index where first instance of the word  \"code\" starts using .find()\n",
     "work_tip = \"Good code is commented code\"\n",
+    "print (work_tip.find(\"code\"))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 code\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] search for \"code\" in code_tip using .find() \n",
     "# [ ] search substring with substring index start= 13,end = last char \n",
     "# [ ] save result in variable: code_index\n",
     "# [ ] display index of where \"code\" is found, or print \"not found\" if code_index == -1\n",
+    "\n",
     "work_tip = \"Good code is commented code\"\n",
-    "\n"
+    "\n",
+    "code_index = work_tip.find(\"code\", 13, len(work_tip))\n",
+    "\n",
+    "if code_index == -1:\n",
+    "    print (\"not found\")\n",
+    "else:\n",
+    "    print (code_index, work_tip[code_index:])"
    ]
   },
   {
@@ -402,27 +483,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O's:  5 \n",
+      "W's:  0 \n",
+      "\"Code\"s:  2\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] find and report (print) number of w's, o's + use of word \"code\"\n",
     "work_tip = \"Good code is commented code\"\n",
+    "ws = work_tip.count(\"w\")\n",
+    "os = work_tip.count(\"o\")\n",
+    "codes = work_tip.count (\"code\")\n",
+    "\n",
+    "print (\"O's: \", os, \"\\nW's: \", ws, '\\n\"Code\"s: ', codes)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "code_tip: code a conditional decision like you would say it\n",
+      "11\n",
+      "13\n",
+      "22\n",
+      "24\n",
+      "29\n",
+      "47\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  count times letter \"i\" appears in code_tip string\n",
     "# [ ] find and display the index of all the letter i's in code_tip\n",
     "# Remember: if .find(\"i\") has No Match, -1 is returned\n",
     "code_tip = \"code a conditional decision like you would say it\"\n",
+    "index = 0\n",
+    "temp = 0\n",
+    "\n",
+    "\n",
     "print (\"code_tip:\" , code_tip)\n",
-    "\n"
+    "\n",
+    "icount = code_tip.count(\"i\")\n",
+    "\n",
+    "while index < len(code_tip):\n",
+    "    temp = code_tip.find(\"i\",index)\n",
+    "    if temp == -1:\n",
+    "        break\n",
+    "    else:\n",
+    "        print (temp)\n",
+    "        \n",
+    "    index = temp + 1\n",
+    "        "
    ]
   },
   {
@@ -466,12 +592,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WHERESOEVER\n",
+      "YOU\n",
+      "WITH\n",
+      "YOUR\n",
+      "HEART\n",
+      "HEART\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create words after \"G\"\n",
     "# sample quote \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
+    "phrase = \"Wheresoever you go, go with all your heart\"\n",
+    "index = 0\n",
+    "word = \"\"\n",
+    "maxlen = len(phrase)\n",
+    "phrase = phrase.upper()\n",
+    "\n",
+    "while index < (maxlen + 1):\n",
+    "#    print (index, \" \", phrase[index])\n",
+    "    if index >= maxlen:\n",
+    "        print (word)\n",
+    "        break\n",
+    "                \n",
+    "    if phrase[index].isalpha():\n",
+    "#        print (phrase[index])\n",
+    "        word = word + phrase[index]\n",
+    "#        print (word)\n",
+    "#       word = \"\"\n",
+    "    else:\n",
+    "        if word.isalpha():\n",
+    "            if word[0] > \"G\":\n",
+    "                print (word)\n",
+    "            word = \"\"\n",
+    "        else:\n",
+    "            word = \"\"\n",
+    "        \n",
+    "\n",
+    "    index +=1\n",
+    "    \n",
     "\n"
    ]
   },
