--- a/Python Fundamentals/Module_1_Required_Code_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_1_Required_Code_Python_Fundamentals.ipynb
@@ -53,18 +53,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a phase: Suddenly I heard a knocking, knocking at my Chamber door.\n",
+      "SUDDENLY\n",
+      "I\n",
+      "HEARD\n",
+      "KNOCKING\n",
+      "KNOCKING\n",
+      "MY\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create words after \"G\" following the Assignment requirements use of functions, menhods and kwyowrds\n",
     "# sample quote \"Wheresoever you go, go with all your heart\" ~ Confucius (551 BC - 479 BC)\n",
     "# [] copy and paste in edX assignment page\n",
     "\n",
+    "phrase = input (\"Enter a phase: \")\n",
+    "phrase = phrase.lower()\n",
+    "index = \"\"\n",
+    "char = \"\"\n",
+    "word =\"\"\n",
     "\n",
-    "\n"
+    "for char in phrase:\n",
+    " #   print (char)\n",
+    "    if char.isalpha():\n",
+    "        word = word + char\n",
+    "    elif word >= \"h\":\n",
+    "        print (word.upper())\n",
+    "        word = \"\"\n",
+    "    else:\n",
+    "        word = \"\"\n",
+    "\n",
+    "if word.lower() >= \"h\":\n",
+    "    print(word.upper())"
    ]
   },
   {
@@ -92,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
